# mocap4r2

./: README.md  dependency_repos.repos
mocap4r2_marker_viz/mocap4r2_marker_viz/launch/: mocap4r2_marker_viz.launch.py
mocap4r2_marker_viz/mocap4r2_marker_viz/rviz/: config.rviz
mocap4r2_people/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap4r2_people/include/mocap4r2_people/: people_component.hpp
mocap4r2_people/launch/: mocap4r2_people.launch.py
mocap4r2_people/params/: params.yaml
mocap4r2_people/src/: people_program.cpp
mocap4r2_people/src/mocap4r2_people/: people_component.cpp
mocap4r2_robot_gt/mocap4r2_robot_gt/: package.xml
mocap4r2_robot_gt/mocap4r2_robot_gt/include/mocap4r2_robot_gt/: gt_component.hpp
mocap4r2_robot_gt/mocap4r2_robot_gt/launch/: map_server.launch.py  mocap4r2_robot_gt.launch.py
mocap4r2_robot_gt/mocap4r2_robot_gt/params/: params.yaml
mocap4r2_robot_gt/mocap4r2_robot_gt/src/mocap4r2_robot_gt/: gt_component.cpp
mocap4r2_robot_localization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mocap4r2_robot_localization/include/mocap4r2_robot_localization/: localization_component.hpp
mocap4r2_robot_localization/launch/: mocap4r2_robot_gt.launch.py  mocap4r2_robot_localization.launch.py
mocap4r2_robot_localization/params/: params.yaml
mocap4r2_robot_localization/src/: localization_program.cpp
mocap4r2_robot_localization/src/mocap4r2_robot_localization/: localization_component.cpp
